--- a/client/src/app/components/shared/site/site.component.html
+++ b/client/src/app/components/shared/site/site.component.html
@@ -5,7 +5,7 @@
 
     <app-sidenav> </app-sidenav>
 
-    <!-- depending type of user.... render right component 
-    <router-outlet> </router-outlet> -->
+    <!-- depending type of user.... load right component -->
+    <router-outlet> </router-outlet> 
 
 </div>
