made basic layout of main page with header and sidenav

--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -1,3 +1,14 @@
-<p>
-  header works!
-</p>
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell"> 
+          <h1> 〄 UberSante </h1>
+      </div>
+      <div class="mdc-layout-grid__cell">
+          <p> Your are logged in as: </p>
+          <h1> Person.... </h1>
+      </div>
+      <div class="mdc-layout-grid__cell">
+       <i class="material-icons"> person_pin </i>
+      </div>
+    </div>
+  </div>
