--- a/client/src/app/components/shared/site/site.component.html
+++ b/client/src/app/components/shared/site/site.component.html
@@ -1,11 +1,9 @@
-<!-- if logged-in is false, redirect to login page -->
-<div appLoggedIn>
+<div >
 
     <app-header> </app-header>
 
     <app-sidenav> </app-sidenav>
 
-    <!-- depending type of user.... load right component -->
     <router-outlet> </router-outlet> 
 
 </div>
