--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,3 +1,5 @@
-<p>
-  sidenav works!
-</p>
+<div class = "sidenav">
+  <div class = "option"> 
+  <button mat-button> View... </button>
+</div>
+</div>
