--- a/client/src/app/components/shared/site/site.component.html
+++ b/client/src/app/components/shared/site/site.component.html
@@ -4,6 +4,10 @@
 
     <app-sidenav> </app-sidenav>
 
-    <router-outlet> </router-outlet> 
+    <div class = "content"> 
+
+        <router-outlet> </router-outlet> 
+
+    </div>
 
 </div>
