--- a/client/src/app/components/login-registration/login/nurse-login/nurse-login.component.html
+++ b/client/src/app/components/login-registration/login/nurse-login/nurse-login.component.html
@@ -1,13 +1,17 @@
 <form [formGroup]="nurseLogin" (ngSubmit)="onSubmit()">
+  <div>
     <mat-form-field>
       <input matInput placeholder="Nurse Access ID" formControlName="nurseID">
     </mat-form-field>
+  </div>
     <mat-error *ngIf="nurseLogin.get('nurseID').hasError('pattern')">
       Please enter a valid ID
     </mat-error>
+    <div>
     <mat-form-field>
         <input matInput placeholder="Password" formControlName="password">
       </mat-form-field>
+    </div>
     <div>
       <button mat-raised-button type="submit" mat-button> Login </button>
     </div>
