fixed login picture alignment

--- a/client/src/app/components/login-registration/login/login.component.html
+++ b/client/src/app/components/login-registration/login/login.component.html
@@ -1,4 +1,8 @@
 <div class="background">
+  
+  <img src="/assets/cover-photo.jpg">
+
+</div>
 
   <div class="form">
 
@@ -21,4 +25,3 @@
   </div>
 
 
-</div>
