--- a/client/src/app/components/login-registration/registration/registration.component.html
+++ b/client/src/app/components/login-registration/registration/registration.component.html
@@ -1,10 +1,16 @@
 <form [formGroup]="patientRegistration" (ngSubmit)="onSubmit()">
   <mat-form-field>
-    <input matInput placeholder="Healthcard Number" formControlName="healthNum">
+    <input matInput placeholder="Healthcard #" formControlName="healthCard">
   </mat-form-field>
-  <mat-error *ngIf="patientRegistration.get('healthNum').hasError('pattern')">
-    Please enter a valid healthcard number
-  </mat-error>
+  <mat-error *ngIf="patientRegistration.get('healthCard').hasError('pattern')">
+      Please enter a valid healthcard number
+    </mat-error>
+  <mat-form-field>
+    <input matInput placeholder="First Name" formControlName="firstName">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Last Name" formControlName="lastName">
+  </mat-form-field>
   <mat-form-field>
     <input matInput placeholder="Birthday" formControlName="birthday">
   </mat-form-field>
@@ -28,6 +34,9 @@
   </mat-form-field>
   <mat-form-field>
     <input matInput placeholder="Password" formControlName="password">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Confirm Password" formControlName="matchingPassword">
   </mat-form-field>
   <div>
     <button mat-raised-button type="submit" mat-button> Register </button>
