--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,11 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@material/layout-grid/mdc-layout-grid";
 
- * {
-    margin: 0;
-}
-
+ 
 body {
     background-color: #F0F5F8;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -23,3 +21,12 @@ mat-error {
 a {
     text-decoration: none;
 }
+h3 {
+    margin: 0 0 10px;
+  }
+  
+  pre {
+    background-color: #f5f5f5;
+    padding: 15px;
+  }
+  
