--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -5,7 +5,7 @@
       </div>
       <div class="mdc-layout-grid__cell">
           <p> Your are logged in as: </p>
-          <h1> Person.... </h1>
+          <h1> {{user.firstName}} </h1>
       </div>
       <div class="mdc-layout-grid__cell">
        <i class="material-icons"> person_pin </i>
