adding user profile and fixing header links

--- a/client/src/app/components/shared/header/header.component.scss
+++ b/client/src/app/components/shared/header/header.component.scss
@@ -2,6 +2,10 @@ i {
     font-size: 50px;
 }
 
+i:hover, h1:hover  {
+    cursor: pointer;
+}
+
 .mdc-layout-grid {
     background-color: rgb(107, 165, 189);
     padding: 30px;
