--- a/client/src/app/components/shared/sidenav/sidenav.component.scss
+++ b/client/src/app/components/shared/sidenav/sidenav.component.scss
@@ -1,7 +1,7 @@
 .sidenav {
     background-color: rgb(255, 255, 255);
     float: left;
-    position: fixed;
+    position: absolute;
     width: 15%;
     border-right: solid rgb(206, 214, 218);
     height: 100%;
