added logout option

--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,5 +1,8 @@
-<div class = "sidenav">
-  <div class = "option"> 
-  <button mat-button> View... </button>
-</div>
+<div class="sidenav">
+  <div class="option">
+    <button mat-button> View... </button>
+  </div>
+  <div class="option">
+    <button mat-button (click)="this.logout()"> Logout </button>
+  </div>
 </div>
