--- a/client/src/app/components/shared/sidenav/sidenav.component.scss
+++ b/client/src/app/components/shared/sidenav/sidenav.component.scss
@@ -7,7 +7,19 @@
     height: 100%;
 }
 
-.option {
-    padding: 5%;
+.option div {
+    padding: 10%;
     border-bottom: solid rgb(206, 214, 218);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.option div:hover {
+    cursor: pointer;
+    color:rgb(120, 128, 132);
+}
+
+.option div:focus {
+    color:rgb(120, 128, 132);
+    outline: none;
 }
