--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,8 +1,10 @@
 <div class="sidenav">
   <div class="option">
-    <button mat-button> View... </button>
-  </div>
-  <div class="option">
-    <button mat-button (click)="this.logout()"> Logout </button>
+    <div routerLink="/{{authenticated}}">
+      <p> View... </p>
+    </div>
+    <div (click)="this.logout()">
+      <p> Logout </p>
+    </div>
   </div>
 </div>
