--- a/client/src/app/components/login-registration/login/doctor-login/doctor-login.component.html
+++ b/client/src/app/components/login-registration/login/doctor-login/doctor-login.component.html
@@ -2,17 +2,17 @@
   <div>
     <mat-form-field>
       <input matInput placeholder="Permit Number" formControlName="permitNum">
+      <mat-error *ngIf="doctorLogin.get('permitNum').hasError('pattern')">
+          Please enter a valid permit number
+        </mat-error>
     </mat-form-field>
   </div>
-  <mat-error *ngIf="doctorLogin.get('permitNum').hasError('pattern')">
-    Please enter a valid permit number
-  </mat-error>
   <div>
     <mat-form-field>
       <input matInput placeholder="Password" formControlName="password">
     </mat-form-field>
   </div>
-  <div>
+  <div class="button">
     <button mat-raised-button type="submit" mat-button> Login </button>
   </div>
 
