--- a/client/src/app/components/login-registration/login/doctor-login/doctor-login.component.html
+++ b/client/src/app/components/login-registration/login/doctor-login/doctor-login.component.html
@@ -1,15 +1,15 @@
 <form [formGroup]="doctorLogin" (ngSubmit)="onSubmit()">
   <div>
     <mat-form-field>
-      <input matInput placeholder="Permit Number" formControlName="permitNum">
-      <mat-error *ngIf="doctorLogin.get('permitNum').hasError('pattern')">
-          Please enter a valid permit number
-        </mat-error>
+      <input matInput placeholder="Permit Number" formControlName="permitNumber">
+      <mat-error *ngIf="doctorLogin.get('permitNumber').hasError('pattern')">
+        Invalid permit number
+      </mat-error>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field>
-      <input matInput placeholder="Password" formControlName="password">
+      <input matInput placeholder="Password" type="password" formControlName="password">
     </mat-form-field>
   </div>
   <div class="button">
