--- a/client/src/app/components/login-registration/login/nurse-login/nurse-login.component.html
+++ b/client/src/app/components/login-registration/login/nurse-login/nurse-login.component.html
@@ -9,7 +9,7 @@
   </div>
   <div>
     <mat-form-field>
-      <input matInput placeholder="Password" formControlName="password">
+      <input matInput placeholder="Password" type="password" formControlName="password">
     </mat-form-field>
   </div>
   <div class="button">
