--- a/client/src/app/components/doctors/doctor/doctor.component.html
+++ b/client/src/app/components/doctors/doctor/doctor.component.html
@@ -1,20 +1,2 @@
-<div>
-  <h1>Dr. {{ doctor.name }}</h1> 
-</div>
-
-<div>
-  <ul>
-    <li >
-      permit number: {{doctor.permit_number}}
-    </li>
-    <li >
-        specialty: {{doctor.specialty}}
-     </li>
-     <li >
-        city: {{doctor.city}}
-      </li>
-      <li >
-          clinic: {{doctor.clinic}}
-        </li>
-  </ul>
-</div>
+<div></div>
+<app-doctor-view-all></app-doctor-view-all>
