Disabled edit time

--- a/client/src/app/components/patients/patient/patient.component.html
+++ b/client/src/app/components/patients/patient/patient.component.html
@@ -115,6 +115,7 @@
       </td>
       <td>
         <input
+          disabled=true
           class="form-control"
           type="text"
           mwlFlatpickr
@@ -130,6 +131,7 @@
       </td>
       <td>
         <input
+          disabled=true
           class="form-control"
           type="text"
           mwlFlatpickr
