--- a/client/src/app/components/shared/sidenav/sidenav.component.scss
+++ b/client/src/app/components/shared/sidenav/sidenav.component.scss
@@ -4,11 +4,13 @@
     position: absolute;
     width: 15%;
     border-right: solid rgb(206, 214, 218);
+    border-bottom: solid rgb(206, 214, 218);
     height: 100%;
 }
 
 .option div {
     padding: 10%;
+    padding-bottom: 0;
     border-bottom: solid rgb(206, 214, 218);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -22,4 +24,8 @@
 .option div:focus {
     color:rgb(120, 128, 132);
     outline: none;
+}
+
+#logout {
+    float: bottom;
 }
