--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,9 +1,15 @@
 <div class="sidenav">
   <div class="option">
-    <div routerLink="/{{authenticated}}">
-      <p> View... </p>
+
+    <!-- Doctor -->
+    <div routerLink="/{{authenticated}}" *ngIf="this.authenticated=='doctor'">
+      <p> This week </p>
     </div>
-    <div (click)="this.logout()">
+    <div routerLink="/{{authenticated}}/availabilities" *ngIf="this.authenticated=='doctor'">
+      <p> Your availabilities </p>
+    </div>
+
+    <div (click)="this.logout()" id = "logout">
       <p> Logout </p>
     </div>
   </div>
