--- a/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.scss
+++ b/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.scss
@@ -1,3 +1,7 @@
+.content {
+    margin-right: 7%;
+}
+
 .walkin {
     background-color: #e3bc08;
 }
@@ -25,7 +29,7 @@
 }
 
 .fab:hover .fab-buttons__link {
-    transform: scaleY(1) scaleX(1) translateY(-16px) translateX(0px);
+    transform: scaleY(1) scaleX(1) translateY(-16px) translateX(0px) translateZ(1000000px);
 }
 
 .fab-buttons {
