--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell"> 
-          <h1 routerLink="/{{authenticated}}"> 〄 UberSante </h1>
+          <h2 routerLink="/{{authenticated}}"> 〄 UberSante </h2>
       </div>
       <div class="mdc-layout-grid__cell">
           <p> You are logged in as: </p>
-          <h1 routerLink="/user-profile"> {{user.firstName}} </h1>
+          <h5 routerLink="/user-profile"> {{user.firstName}} {{user.lastName}}  </h5>
       </div>
       <div class="mdc-layout-grid__cell">
        <i class="material-icons" routerLink="/user-profile"> person_pin </i>
