--- a/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.html
+++ b/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.html
@@ -86,7 +86,7 @@
   </div>
 </div>
 <br />
-<div [ngSwitch]="view">
+<div [ngSwitch]="view" class="calendar">
   <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"
     [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="viewDate = $event.day.date; view = 'day'" (eventTimesChanged)="eventTimesChanged($event)">
   </mwl-calendar-month-view>
