--- a/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.html
+++ b/client/src/app/components/doctors/doctor-calendar-view/doctor-calendar-view.component.html
@@ -12,7 +12,7 @@
           <tr>
             <th>Type</th>
             <th>Starts at</th>
-            <th>Ends at</th>
+            <th>Duration</th>
             <th *ngIf="modalData?.action !== 'add'" >Remove</th>
           </tr>
         </thead>
@@ -23,14 +23,11 @@
               <p> {{modalData?.event.title}}</p>
             </td>
             <td>
-              <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="modalData?.event.start"
-                (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true"
-                dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+              <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="modalData?.event.start"  [altInput]="true" [convertModelValue]="true" [enableTime]="true"
+                dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" />
             </td>
             <td>
-              <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="modalData?.event.end"
-                (ngModelChange)="refresh.next()" [altInput]="true" [convertModelValue]="true" [enableTime]="true"
-                dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" placeholder="Not set" />
+              <p> {{modalData?.event.duration}} minutes </p>
             </td>
             <td *ngIf="modalData?.action !== 'add'">
               <button class="btn btn-danger" (click)="events.splice(index, 1); refresh.next(); close()">
