--- a/client/src/app/components/patients/patient-view-availability/patient-view-availability.component.html
+++ b/client/src/app/components/patients/patient-view-availability/patient-view-availability.component.html
@@ -1,54 +1,6 @@
-<ng-template #modalContent let-close="close">
-    <div class="modal-header">
-      <h5 class="modal-title"> Event</h5>
-      <button type="button" class="close" (click)="close()">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <div>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Type</th>
-              <th>Starts at</th>
-              <th>Duration</th>
-              <th *ngIf="modalData?.action !== 'add'" >Remove</th>
-            </tr>
-          </thead>
-  
-          <tbody>
-            <tr>
-              <td>
-                <p> {{modalData?.event.title}}</p>
-              </td>
-              <td>
-                <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="modalData?.event.start"  [altInput]="true" [convertModelValue]="true" [enableTime]="true"
-                  dateFormat="Y-m-dTH:i" altFormat="F j, Y H:i" />
-              </td>
-              <td>
-                <p> {{modalData?.event.duration}} minutes </p>
-              </td>
-              <td *ngIf="modalData?.action !== 'add'">
-                <button class="btn btn-danger" (click)="remove(modalData?.event.start); close()">
-                  Delete
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-  
-      </div>
-    </div>
-    <div class="modal-footer">
-      <button type="button" (click) = "apply(modalData?.action, modalData?.event)" class="btn btn-outline-secondary" (click)="close()">
-        Apply
-      </button>
-    </div>
-  </ng-template>
-  
+
   <div class = "content">
-  
+
   <div class="row text-center">
     <div class="col-md-4">
       <div class="btn-group">
@@ -85,7 +37,7 @@
   <br />
   <div [ngSwitch]="view" class="calendar">
     <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"
-      [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="viewDate = $event.day.date;" (eventTimesChanged)="eventTimesChanged($event)">
+      [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)" (eventTimesChanged)="eventTimesChanged($event)">
     </mwl-calendar-month-view>
     <mwl-calendar-week-view *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate" [events]="events" [dayStartHour]="8"
       [dayEndHour]="20" [hourSegments]="3" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
@@ -94,5 +46,5 @@
       [dayEndHour]="20" [hourSegments]="3" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
     </mwl-calendar-day-view>
   </div>
-  
+
   </div>
