[#45] - small modification to html

--- a/client/src/app/components/patients/patient-booking/patient-booking.component.html
+++ b/client/src/app/components/patients/patient-booking/patient-booking.component.html
@@ -4,5 +4,5 @@
 
 </div>
   <button mat-button (click)="close()">Cancel</button>
-  <button mat-button (click)="close() ">Finish</button>
+  <button mat-button (click)="bookAppointment() ">Add to cart</button>
 
