--- a/client/src/app/components/patients/patient-cart/patient-cart/patient-cart.component.html
+++ b/client/src/app/components/patients/patient-cart/patient-cart/patient-cart.component.html
@@ -1,10 +1,15 @@
 <div>
 <h2>Cart</h2>
 <ul>
-  <li *ngFor="let list of list">
+  <li *ngFor="let list of list; let i = index">
+    <div>
     <span class="badge">Appointment from {{list.start}} to {{list.end}} on {{list.day}}
-        </span>
+    </span> 
+    <button mat-button (click)="remove(index)">Remove</button>
+  </div>
   </li>
 </ul>
+<ng-template #other_content>Cart is empty</ng-template>
 </div>
-<button *ngIf="this.list.length>=1" mat-button (click)="checkout()">Checkout</button>
+<button *ngIf="this.list.length>=1;else other_content" mat-button (click)="checkout()">Checkout</button>
+
